[gd_scene load_steps=38 format=1]

[ext_resource path="res://scripts/personagem.gd" type="Script" id=1]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando.png" type="Texture" id=2]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando1.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando2.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando3.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando4.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando5.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando6.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando7.png" type="Texture" id=9]
[ext_resource path="res://assets/Personagem/socando/asesprite/socando8.png" type="Texture" id=10]
[ext_resource path="res://assets/Personagem/andando/asesprite/andando.png" type="Texture" id=11]
[ext_resource path="res://assets/Personagem/andando/asesprite/andando1.png" type="Texture" id=12]
[ext_resource path="res://assets/Personagem/andando/asesprite/andando2.png" type="Texture" id=13]
[ext_resource path="res://assets/Personagem/andando/asesprite/andando3.png" type="Texture" id=14]
[ext_resource path="res://assets/Personagem/andando/asesprite/andando4.png" type="Texture" id=15]
[ext_resource path="res://assets/Personagem/pulando/asesprite/pulando.png" type="Texture" id=16]
[ext_resource path="res://assets/Personagem/pulando/asesprite/pulando1.png" type="Texture" id=17]
[ext_resource path="res://assets/Personagem/pulando/asesprite/pulando2.png" type="Texture" id=18]
[ext_resource path="res://assets/Personagem/pulando/asesprite/pulando3.png" type="Texture" id=19]
[ext_resource path="res://assets/Personagem/pulando/asesprite/pulando4.png" type="Texture" id=20]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo.png" type="Texture" id=21]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo1.png" type="Texture" id=22]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo2.png" type="Texture" id=23]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo3.png" type="Texture" id=24]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo4.png" type="Texture" id=25]
[ext_resource path="res://assets/Personagem/morrendo/asesprite/morrendo5.png" type="Texture" id=26]
[ext_resource path="res://assets/Personagem/parada/asesprite/parada.png" type="Texture" id=27]
[ext_resource path="res://assets/Personagem/parada/asesprite/parada1.png" type="Texture" id=28]
[ext_resource path="res://assets/Personagem/parada/asesprite/parada3.png" type="Texture" id=29]
[ext_resource path="res://assets/sounds/jump.ogg" type="AudioStream" id=30]
[ext_resource path="res://assets/sounds/pickup.ogg" type="AudioStream" id=31]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.4063, 14.6656 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "punching",
"speed": 20.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 29 ) ],
"loop": true,
"name": "parada",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 7.63824, 0.600737 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 12.6907, 14.4812 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 11.7862, 0.785228 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 1.50648, 13.2121 )

[node name="personagem" type="KinematicBody2D"]

transform/scale = Vector2( 3, 3 )
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.195651, 2.68565 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.01
script/script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "jump"
playing = true

[node name="shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.195651, 2.68565 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="rayE" type="RayCast2D" parent="."]

transform/pos = Vector2( -11.1434, 14.9897 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="rayD" type="RayCast2D" parent="."]

transform/pos = Vector2( 11.1146, 15.6913 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 900
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="pes" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.0725077, 19.0582 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="pes"]

transform/pos = Vector2( 0.0725077, 19.0582 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="corpo" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.498256, 2.27747 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="corpo"]

transform/pos = Vector2( 0.498256, 2.27747 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="cabeca" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.228851, -13.2089 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="cabeca"]

transform/pos = Vector2( 0.228851, -13.2089 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="soco" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 15.2042, 3.69406 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -14.4988, 2.61656 )
shapes/1/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="soco"]

transform/pos = Vector2( 15.2042, 3.69406 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="shape1" type="CollisionShape2D" parent="soco"]

transform/pos = Vector2( -14.4988, 2.61656 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 1

[node name="jumpSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 30 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="moedaSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 31 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="body_enter" from="pes" to="." method="_on_pes_body_enter"]

[connection signal="body_enter" from="corpo" to="." method="_on_corpo_body_enter"]

[connection signal="body_enter" from="cabeca" to="." method="_on_cabeca_body_enter"]

[connection signal="body_enter" from="soco" to="." method="_on_soco_body_enter"]


